// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients switch 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with single recipient data 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Avatar__AvatarWrapper-sc-18vw8a4-0 dNqA-DA flex-shrink-0"
                          data-testid="Avatar"
                        >
                          <div
                            class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                          >
                            <img
                              alt="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                              title="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without the single & multiple switch 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="AmountCrypto"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="33.75089801"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw active"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should show zero amount if wallet has zero or insufficient balance 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-sc-15n3zff-0 bEHvvX"
  >
    <div
      class="flex justify-between items-center mb-2 text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="Switch__SwitchText-sc-161iiro-0 faOaTv"
              role="button"
            >
              Single
            </span>
            <label
              class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
            >
              <input
                class="Toggle__Input-sc-6s3wfu-1 utRNX"
                type="checkbox"
              />
              <div
                class="Toggle__Handle-sc-6s3wfu-2 giHppe"
              >
                <span
                  class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
                />
              </div>
            </label>
            <span
              class="Switch__SwitchText-sc-161iiro-0 bBuInq"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="flex justify-center items-center w-5 h-5 rounded-full cursor-pointer questionmark bg-theme-primary-100 hover:bg-theme-primary-700 dark:bg-theme-secondary-800 text-theme-primary-600 dark:text-theme-secondary-200 hover:text-white"
        >
          <div
            class="sc-bdnxRM AkeAK"
            height="10"
            width="10"
          >
            <svg>
              question-mark-small.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 coFTZi"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 cPUFYC bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                          data-testid="SelectDropdown__input"
                          id="SelectRecipient__dropdown-input"
                          name="recipientAddress"
                          placeholder="Address"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdnxRM NjstW"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 eqsPyr"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap text-sm font-semibold whitespace-no-break text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="AmountCrypto"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-1tdk8mn-0 fXfgyw active"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
